<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_text">Please log in or create a new account</string>
    <string name="login_label">Login</string>
    <string name="pwd_label">Password</string>
    <string name="log_in_btn_text">Log in</string>
    <string name="new_account_btn_text">New account</string>
    <string name="logout">logout</string>
</resources>
